small format changes
